--- a/client/static/partials/home.html
+++ b/client/static/partials/home.html
@@ -1,17 +1,69 @@
-<link rel="stylesheet" type="text/css" href="/static/stylesheets/index.css">
+<!DOCTYPE html>
+<html>
+
+
+<head>
+
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+<!-- <script type="text/javascript">
+
+  Stripe.setPublishableKey('pk_test_iI5vzpvjU8e1Faf8VHzTkkRe');
+
+  $(function() {
+
+  var $form = $('#payment-form');
+
+  $form.submit(function(event) {
+
+    // Disable the submit button to prevent repeated clicks:
+
+    $form.find('.submit').prop('disabled', true);
+
+    // Request a token from Stripe:
+    Stripe.card.createToken($form, stripeResponseHandler);
+
+    // Prevent the form from being submitted:
+    return false;
+
+  });
+
+});
+
+</script> -->
+
+<link rel="stylesheet" type="text/css" href="../static/stylesheets/index.css">
+
+<script src="/bower_components/kurento-utils/js/kurento-utils.js"></script>
+
+<script src="/bower_components/webrtc-adapter/release/adapter.js"></script>
+
+<script src="../js/config/video.js"></script>
+
+</head>
+
+<body>
+<!-- <ul class="tabs-test">
+<li class="tab1">Feat.</li>
+<li class="tab2">Popu.</li>
+</ul> -->
+
+
 
 <nav>
 
   <ul>
 
-    <li class="brand"><!-- <div class="title"><span>Life Streams</span><span>Crowdfunding and Live Streaming<a
-       href="#">Combined</a></span></div> -->LS</li>
+    <a href="index.html"><li class="brand"><!-- <div class="title"><span>Life Streams</span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span></div> -->LS</li></a>
 
     <!-- <a href="./index.html"><li class="active">Home</li></a> -->
+    <a href="explore.html"><li>Explore</li></a>
 
-    <a href="./explore.ejs"><li>Explore</li></a>
-
-    <li>About</li>
+    <a href="#"><li>About</li></a>
 
     <a href="#" class="openb"><li>Log In</li></a>
 
@@ -27,101 +79,43 @@
 
  <div class="container">
 
-     <div class="column-one">
+  <div class="column-one">
 
-       <div class="title"><span>Life Streams<img class="earth" src="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png">
+  <div class="title"><span>Life Streams<img class="earth" src="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png">
 
-          </span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span>
+  </span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span> </div>
 
-       </div>
+    <div class="featured">
 
-       <div class="featured">
+      <div class="featured-background">
 
-         <div class="featured-background">
+        <div class="featured-video">
 
-           <div class="featured-video">
-
-             <video id="video" autoplay width="100%" height="100%"></video>
-
-           </div>
-
-           <div class="summary">
-
-             <h1>ADULT SWIM</h1>
-
-             <p>What's up, this is all the info about the stream, learn all the things, chill and chill</p>
-
-             <a class="watch-button" id="presenter">Participate</a>
-
-           </div>
-
-         </div>
-
-         <div class="ask-button">
-
-           <img class="ask-image" src="http://peerwithin.com/wp-content/uploads/2016/11/ASKLIVE.png">
-
-         </div>
-
-         <div class="open3 donate-button">
-
-           <img class="donate-image" src="http://peerwithin.com/wp-content/uploads/2016/11/DONATE.png">
-
-         </div>
-
-       </div>
-
-     </div>
-
-     <div class="column-two">
-
-       <div class="wrap">
-
-         <ul class="tabs group">
-
-           <li><a class="active" href="#/one">Featured</a></li>
-
-           <li><a href="#/two">Popular</a></li>
-
-         </ul>
-
-         <div id="content">
-
-           <div id="one" class="featured-videos">
-
-           </div>
-
-           <div id="two" class="hidden">Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t,  consectetur adipisicing elit. Pariatur modi quod quo iureq</div>
-
-           <div id ="three" class="hidden">Tabs , consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq</div>
-
-            <a id="" href="#" class="btn btn-success">
-
-              <span class="glyphicon glyphicon-play"></span> Presenter</a>
-
-            <a id="viewer" href="#" class="btn btn-primary">
-
-              <span class="glyphicon glyphicon-user"></span> Viewer</a>
-
-            <a id="terminate" href="#" class="btn btn-danger">
-
-              <span class="glyphicon glyphicon-stop"></span> Stop</a>
-
-            </div>
-
-          </div>
-
-          <br/>
-
-          <label class="control-label" for="console">Console</label><br><br>
-
-          <div id="console" class="democonsole">
-
-            <ul></ul>
-
-          </div>
+          <video id="video" autoplay width="100%" height="100%"></video>
 
         </div>
+
+        <div class="summary">
+
+          <h1>ADULT SWIM</h1>
+
+          <p>What's up, this is all the info about the stream, learn all the things, chill and chill</p>
+
+          <a class="watch-button" id="presenter">Participate</a>
+
+        </div>
+
+      </div>
+
+      <div class="ask-button">
+
+        <img class="ask-image" src="http://i.imgur.com/6CfFMtX.png">
+
+      </div>
+
+      <div class="open3 donate-button">
+
+        <img class="donate-image" src="http://i.imgur.com/8xQHMrg.png">
 
       </div>
 
@@ -129,35 +123,39 @@
 
   </div>
 
-</div>
+  <div class="column-two">
 
-</div>
+    <div id="content">
 
-</div>
-<!--
-<div class="login-modal-overlay modal1">
-   <div class="login-modal reg-modal">
-    <h1>Log In</h1>
-    <h2>R U FUKIN REDY?</h2>
-    <form>
-      <div class="group">
-        <input type="text"required></span><span class="bar"></span>
-        <label>Username</label>
+      <div class="searchBar">
+
+        <form>
+
+          <input type="text" />
+
+          <div class="after"></div>
+
+          <input type="submit" />
+
+        </form>
+
+        <h4>&nbsp;</h4>
+
       </div>
-      <div class="group">
-        <input type="password" required></span><span class="bar"></span>
-        <label>Password</label>
+
+      <div class="popularVideos">
+
       </div>
-      <button type="submit" class="button buttonBlue">Log In
 
-    </button>
-    <button  class="facebookRegister">Log In With Facebook</button>
-  </form>
-</div>
+      <a class="userProfileBUtton" href="#">User Profile Button</a>
+
+    </div>
+
+  </div>
+
+  <br/>
 
 </div>
-<br>
-<br> -->
 
 </section>
 
@@ -167,43 +165,23 @@
 
     <div id="login-box">
 
-      <!-- Here we want to bring in the authCtrl because this will handle all new users that come to our site.
+      <div class="left">
 
-      After the user has filled in all the information, when they click submit, it will trigger the register function
+        <h1>Log in</h1>
 
-      with Angular and create a new user. -->
-
-      <div class="left form-group" ng-controller="authCtrl">
-
-        <h1>Sign up</h1>
-
-        <form action="/home" method="POST">
-
-          <input type="text" name="username" ng-model="new_user.username" placeholder="Username" />
-
-          <input type="text" name="email" ng-model="new_user.email" placeholder="E-mail" />
-
-          <input type="password" name="password" ng-model="new_user.password" placeholder="Password" />
-
-          <input type="password" name="confirm_password" ng-model="new_user.confirm_password" placeholder="Retype password" />
-
-          <input type="submit" name="signup_submit" value="Sign me up" ng-click="register()" />
-
-        </form>
+        <input type="text" name="username" placeholder="Username" />
+    <!-- <input type="text" name="email" placeholder="E-mail" /> -->
+        <input type="password" name="password" placeholder="Password" />
+   <!--  <input type="password" name="password2" placeholder="Retype password" /> -->
+        <input type="submit" name="signup_submit" value="Log In" />
 
       </div>
 
-      <!-- This is the end of the authCtrl div.  -->
+      <div class="right">
 
-      <!-- Now we want to bring in the loginCtrl so we can log existing users in. Here we can also go through the authentications
+        <span class="loginwith">Sign in with a<br />Social Network</span>
 
-      we need to make sure in fact it's that user who is logging in. -->
-
-      <div class="right" ng-controller="loginCtrl">
-
-        <span class="loginwith">Sign in with<br />social network</span>
-
-        <button class="social-signin facebook">Log in with facebook</button>
+        <button class="social-signin facebook">Log in with Facebook</button>
 
         <button class="social-signin twitter">Log in with Twitter</button>
 
@@ -219,165 +197,119 @@
 
 </div>
 
-
-<!-- <div class="sign-up-modal-overlay modal1">
-
-<div class="sign-up-modal">
-    <div id="close-modal-button">
-    </div>
-
-    <div class="logo-container">
-        <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
-
-    </div>
-
-    <form class="details">
-        <div class="input-container">
-            <input class="email-input with-placeholder" id="email" type="email" placeholder="Email" />
-        </div>
-        <div class="input-container">
-            <input class="username-input with-placeholder" id="username" type="text" placeholder="Username" maxlength="8" />
-        </div>
-        <div class="input-container">
-            <input class="password-input with-placeholder" id="password" type="password" placeholder="Password" />
-        </div>
-
-        <div class="col-sm-12 form-checkbox">
-            <label>
-                <input type="checkbox" value="true"> Keep me signed in</label>
-        </div>
-
-        <input id="sign-up-button" type="submit" value="Sign Up">
-
-        <p>Already have an account? <a href="#signIn">Sign in</a></p>
-
-    </form>
-</div>
-</div>
 <div class="sign-up-modal-overlay modal2">
 
-<div class="sign-up-modal">
-    <div id="close-modal-button2">
+  <div class="sign-up-modal">
+
+    <div id="login-box">
+
+      <div class="left">
+
+        <h1>Sign Up</h1>
+
+        <input type="text" name="username" placeholder="Username" />
+
+        <input type="text" name="email" placeholder="E-mail" />
+
+        <input type="password" name="password" placeholder="Password" />
+
+        <input type="password" name="password2" placeholder="Retype password" />
+
+        <input type="submit" name="signup_submit" value="Get Started" />
+
+      </div>
+
+      <div class="right">
+
+        <span class="loginwith">Sign up with a<br />Social Network</span>
+
+        <button class="social-signin facebook">Sign Up with Facebook</button>
+
+        <button class="social-signin twitter">Sign Up with Twitter</button>
+
+        <button class="social-signin google">Sign Up with Google+</button>
+
+      </div>
+
+      <div class="or">OR</div>
+
     </div>
 
-    <div class="logo-container">
-        <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
-
-    </div>
-
-    <form class="details">
-        <div class="input-container">
-            <input class="username-input with-placeholder" id="username" type="text" placeholder="Username" maxlength="8" />
-        </div>
-        <div class="input-container">
-            <input class="password-input with-placeholder" id="password" type="password" placeholder="Password" />
-        </div>
-
-        <div class="col-sm-12 form-checkbox">
-            <label>
-                <input type="checkbox" value="true"> Keep me signed in</label>
-        </div>
-
-        <input id="sign-up-button" type="submit" value="Log In">
-
-        <p>Already have an account? <a href="#signIn">Sign in</a></p>
-
-    </form>
-</div>
-</div>
- -->
-
-<!-- <div class="login-modal-overlay modal2">
-
-  <div class="login-modal reg-modal">
-    <h1>Register</h1>
-    <h2>R U FUKIN REDY?</h2>
-    <form>
-    <div class="group">
-        <input type="email" required></span><span class="bar"></span>
-        <label>E-Mail</label>
-      </div>
-      <div class="group">
-        <input type="text"required></span><span class="bar"></span>
-        <label>Username</label>
-      </div>
-      <div class="group">
-        <input type="password" required></span><span class="bar"></span>
-        <label>Password</label>
-      </div>
-      <button type="submit" class="button buttonBlue">Register
-
-    </button>
-    <button  class="facebookRegister">Register With Facebook</button>
-  </form>
-</div>
+  </div>
 
 </div>
- -->
+
 <div class="donateModal">
 
   <div class="sign-up-modal-overlay modal3">
 
-    <div class="sign-up-modal">
+   <div class="sign-up-modal">
 
-       <div id="close-modal-button" class="close-2">
+      <div id="close-modal-button" class="close-2">
 
-       </div>
+      </div>
 
-       <div class="logo-container">
+      <div class="logo-container">
 
-         <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
+        <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
 
-       </div>
-       <h1>Donate to X</h1>
+      </div>
 
-       <form action="/create" method="POST" id="payment-form">
+      <h1>Donate to X</h1>
 
-         <span class="payment-errors"></span>
+      <form action="/create" method="POST" id="payment-form">
 
-         <div class="group">
+        <span class="payment-errors"></span>
 
-           <input type="text" placeholder="First Name" data-stripe="firstName">
+        <div class="group">
 
-         </div>
+          <input type="text" placeholder="First Name" data-stripe="firstName">
 
-         <div class="group">
+        </div>
 
-           <input type="text" placeholder="Last Name"  data-stripe="lastName">
+        <div class="group">
 
-         </div>
+          <input type="text" placeholder="Last Name"  data-stripe="lastName">
 
-         <div class="group">
+        </div>
 
-           <input type="text" placeholder="Card Number"  data-stripe="number">
+        <div class="group">
 
-         </div>
+          <input type="text" placeholder="Card Number"  data-stripe="number">
 
-         <div class="group">
+        </div>
 
-           <input type="text"  placeholder="Month" data-stripe="exp_month">
+        <div class="group">
 
-           <input type="text" placeholder="Year" data-stripe="exp_year">
+          <input type="text"  placeholder="Month" data-stripe="exp_month">
 
-         </div>
+          <input type="text" placeholder="Year" data-stripe="exp_year">
 
-         <div class="group">
+        </div>
 
-           <input type="text" placeholder="CVC" data-stripe="cvc">
+        <div class="group">
 
-         </div>
+          <input type="text" placeholder="CVC" data-stripe="cvc">
 
-         <input type="submit" class="submit" value="Submit Payment">
+        </div>
 
-       </form>
+        <input type="submit" class="submit" value="Submit Payment">
 
-     </div>
+      </form>
 
-   </div>
+    </div>
+
+  </div>
 
 </div>
 
   <!-- Link to open the modal -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-<script type="text/javascript" src="/js/config/index.js"></script>
+<script type="text/javascript" src="../js/index.js">
+
+</script>
+
+</body>
+
+</html>
