--- a/client/static/partials/nav.html
+++ b/client/static/partials/nav.html
@@ -1,16 +1,20 @@
+<link rel="stylesheet" type="text/css" href="/static/stylesheets/index.css">
+
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
 
   <ul class="navList">
 
-    <li><a ui-sref="home">LS</a></li>
+    <li class="brand"><a ui-sref="home">LS</a></li>
 
     <li><a ui-sref="explore">Explore</a></li>
 
-    <li><a ui-sref="login">Login</a></li>
+    <li><a ui-sref="about">About</a></li>
 
-    <li><a ui-sref="register">Register</a></li>
+    <li><a class="openb">Login</a></li>
 
-    <li><a ui-sref="profile">Profile</a></li>
+    <li><a ui-sref="start" class="open2">Start</a></li>
+
+    <li class="slide"></li>
 
   </ul>
 
